Bug 162912 - [Basic-IDE] In the Japanese UI, double-clicking on Basic-Code also selects strings beyond the dot
Summary: [Basic-IDE] In the Japanese UI, double-clicking on Basic-Code also selects st...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
24.8.0.3 release
Hardware: All All
: medium normal
Assignee: Jonathan Clark
URL:
Whiteboard: target:25.2.0 target:24.8.5 target:24...
Keywords: bibisected, bisected, regression
: 162178 (view as bug list)
Depends on:
Blocks: CJK BASIC-IDE
  Show dependency treegraph
 
Reported: 2024-09-10 22:43 UTC by nobu
Modified: 2025-02-21 18:09 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description nobu 2024-09-10 22:43:25 UTC
Description:
[Basic-IDE] In the Japanese UI, double-clicking on Basic-Code also selects strings beyond the dot.

Steps to Reproduce:
1. Change UI to Japanese, and restart.
2. Open Basic IDE.
3. Create Simple Basic Code.
ex.

Sub Main
  oCel = ThisComponent.CurrentSelection
End Sub

4. Double-click anywhere on "ThisComponent.CurrentSelection".

Actual Results:
5. "ThisComponent.CurrentSelection" will be highlighted.
  In the Japanese UI, properties beyond the dot are also added and highlighted like this.

Expected Results:
5. "ThisComponent" or "CurrentSelection" will be highlighted.
  This is how it works in the English UI and appears to be normal.


Reproducible: Always


User Profile Reset: No

Additional Info:

Not Reproduced with
Version: 24.2.6.2 (X86_64) / LibreOffice Community
Build ID: ef66aa7e36a1bb8e65bfbc63aba53045a14d0871
CPU threads: 4; OS: Windows 10.0 Build 10240; UI render: Skia/Raster; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: threaded

Reproducible with
Version: 24.8.2.0.0+ (X86_64) / LibreOffice Community
Build ID: 7c3620b9fa54eac752c8623e635743dd6a44a1ec
CPU threads: 4; OS: Windows 10 X86_64 (10.0 build 10240); UI render: Skia/Raster; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: threaded

Not Reproduced with (If only the UI is changed to U.S. or U.K.).
Version: 24.8.2.0.0+ (X86_64) / LibreOffice Community
Build ID: 7c3620b9fa54eac752c8623e635743dd6a44a1ec
CPU threads: 4; OS: Windows 10 X86_64 (10.0 build 10240); UI render: Skia/Raster; VCL: win
Locale: ja-JP (ja_JP); UI: en-US
Calc: threaded

Reproducible with
Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 3e8183e0c4b4c116cbd9187bfdfa7dfdf447805e
CPU threads: 4; OS: Windows 10 X86_64 (10.0 build 10240); UI render: Skia/Raster; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: threaded

Not Reproduced with (If only the UI is changed to U.S. or U.K.).
Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 3e8183e0c4b4c116cbd9187bfdfa7dfdf447805e
CPU threads: 4; OS: Windows 10 X86_64 (10.0 build 10240); UI render: Skia/Raster; VCL: win
Locale: ja-JP (ja_JP); UI: en-US
Calc: threaded
Comment 1 Buovjaga 2024-11-27 17:55:22 UTC
Bibisected with win64-24.8 to 14c6cde779d64596eab0f4d3f32f181ce2243929
tdf#49885 Updated CJK BreakIterator to use ICU

Also repro on Linux.

To bibisect I first did this: https://wiki.documentfoundation.org/QA/Bibisect#Bibisecting_language-specific_bugs
Comment 2 Commit Notification 2024-12-03 00:30:00 UTC
Jonathan Clark committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9a14a0fd8b4227b5d08b3154cddca46f82ec2a03

tdf#162912 i18npool: Updated CJK BreakIterator to use custom rules

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Buovjaga 2024-12-03 09:41:46 UTC
Verified, thanks

Version: 25.2.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 890c03d39059685735f5ada62e706204eab81f0d
CPU threads: 8; OS: Linux 6.12; UI render: default; VCL: kf6 (cairo+wayland)
Locale: fi-FI (fi_FI.UTF-8); UI: ja-JP
Calc: CL threaded
Comment 4 Buovjaga 2024-12-03 09:43:21 UTC
*** Bug 162178 has been marked as a duplicate of this bug. ***
Comment 5 Commit Notification 2024-12-03 23:20:26 UTC
Jonathan Clark committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/10ee7d30f7c1c8c9b80155341c2bf1639ca21d5f

tdf#162912 i18npool: Updated CJK BreakIterator to use custom rules

It will be available in 24.8.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 nobu 2024-12-06 10:37:12 UTC
It seems to be working correctly. Thanks.

Version: 25.2.0.0.beta1+ (X86_64) / LibreOffice Community
Build ID: 5ddccd3896abe24de2ff4b4f3cc9bf609305990a
CPU threads: 4; OS: Windows 10 X86_64 (10.0 build 19045); UI render: Skia/Vulkan; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: CL threaded
Comment 7 Commit Notification 2024-12-10 15:01:34 UTC
Jonathan Clark committed a patch related to this issue.
It has been pushed to "libreoffice-24-8-4":

https://git.libreoffice.org/core/commit/497ca77d329aef04f30d74f1ddcea67ac62712f5

tdf#162912 i18npool: Updated CJK BreakIterator to use custom rules

It will be available in 24.8.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.